# ska-base-image

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  pyproject.toml
docs/src/: conf.py  index.rst
docs/src/_static/css/: custom.css  wide_page.css
docs/src/reports/: cis_level2.rst  oval.rst  standard.rst  stig.rst
images/ska-base/: Dockerfile
images/ska-build/: Dockerfile
images/ska-build-node/: Dockerfile
images/ska-build-python/: Dockerfile
images/ska-node/: Dockerfile
images/ska-node-build/: Dockerfile
images/ska-node-test/: Dockerfile
images/ska-python/: Dockerfile
images/ska-webserver/: Dockerfile
images/ska-webserver/resources/: conf.yml  docker-entrypoint.sh  generate.py  nginx.conf.j2  nginx.conf.tpl
scripts/: deprecate_harbor_base_images.py
