[tool.poetry]
name = "ska-base-images"
version = "0.1.3"
description = ""
authors = ["Matteo Di Carlo <matteo.dicarlo@inaf.it>"]
readme = "README.md"

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.docs.dependencies]
myst-parser = "^4.0.0"
ska-ser-sphinx-theme = "^0.2.0"
sphinx = "^7.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
