[tool.poetry]
name = "ska-base-images"
version = "0.1.4"
description = ""
authors = ["Matteo Di Carlo <matteo.dicarlo@inaf.it>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[tool.poetry.group.docs.dependencies]
myst-parser = "^4.0.0"
ska-ser-sphinx-theme = "^0.2.0"
sphinx = "^7.4.7"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
pylint = "^3.2.5"
pylint-junit = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
